# peframe

./: README.md  README.rst  install-peframe-termux.sh  install.sh  pyproject.toml  setup.py
peframe/: peframe.py  peframecli.py
peframe/modules/: apialert.py  autocomplete.py  directories.py  features.py  fileurl.py  functions.py  macro.py  meta.py  sections.py  stringstat.py  virustotal.py  yara_check.py
